--- a/libs/ui/src/lib/image-viewer/ImageViewer.module.less
+++ b/libs/ui/src/lib/image-viewer/ImageViewer.module.less
@@ -38,24 +38,30 @@
 }
 
 .uppyButtons {
-  position: absolute;
-  bottom: 15px;
+  position: fixed;
+  background-color: #ffffff;
+  padding: 10px 0px;
+  bottom: 0px;
   width: 100%;
   margin: 0px;
   display: flex;
   justify-content: center;
   align-items: center;
 
-  > div svg {
-    margin: 0px 10px;
-    cursor: pointer;
-    > path:first-child {
-      fill: #54b2d3;
-    }
+  > div {
+    line-height: 0px;
 
-    &:active {
+    svg {
+      margin: 0px 10px;
+      cursor: pointer;
       > path:first-child {
-        fill: #40a0c1;
+        fill: #54b2d3;
+      }
+
+      &:active {
+        > path:first-child {
+          fill: #40a0c1;
+        }
       }
     }
   }
@@ -209,6 +215,8 @@
     position: relative;
     width: 100%;
     height: 100%;
+    min-height: 100%;
+    padding-bottom: 20px;
 
     .zoomInOptions {
       position: fixed;
