Added chnaged on dashboard

--- a/apps/web/components/Dashboard/TopBoard/TopBoard.module.less
+++ b/apps/web/components/Dashboard/TopBoard/TopBoard.module.less
@@ -147,7 +147,7 @@
         font-weight: normal;
         font-size: 14px;
         line-height: 22px;
-        color: #9292A3;
+        color: green;
       }
     }
     .record{
