--- a/libs/ui/src/lib/image-viewer/CamUploaderModal.module.less
+++ b/libs/ui/src/lib/image-viewer/CamUploaderModal.module.less
@@ -103,6 +103,9 @@
   .uppyModalBody {
     background-color: #eeeeee;
     min-height: 550px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
     position: relative;
 
     @media screen and (max-width: 767px) {
@@ -174,8 +177,8 @@
         width: 100%;
 
         video {
-          min-width: 100% !important;
-          min-height: 100% !important;
+          width: 100%;
+          height: 100%;
           height: auto;
         }
         img {
