--- a/libs/ui/src/lib/image-viewer/CamUploaderModal.module.less
+++ b/libs/ui/src/lib/image-viewer/CamUploaderModal.module.less
@@ -190,6 +190,22 @@
       }
     }
 
+    .cameraFlip {
+      position: absolute;
+      top: 0;
+      width: 100%;
+      display: flex;
+      align-items: center;
+      justify-content: flex-end;
+      padding: 20px 30px 20px 20px;
+
+      > svg {
+        width: 45px;
+        height: auto;
+        fill: #ffffff;
+      }
+    }
+
     .addedImagesDiv {
       background-position: center;
       background-repeat: no-repeat;
@@ -281,12 +297,6 @@
     justify-content: space-between;
     align-items: center;
     padding: 0px 24px;
-
-    @media screen and (max-width: 767px) {
-      position: absolute;
-      width: 100%;
-      bottom: 0;
-    }
 
     > div {
       display: flex;
