--- a/libs/ui/src/lib/image-viewer/ImageViewer.module.less
+++ b/libs/ui/src/lib/image-viewer/ImageViewer.module.less
@@ -40,6 +40,7 @@
 .uppyButtons {
   position: fixed;
   background-color: #ffffff;
+  box-shadow: 0px -2px 6px rgba(0, 34, 65, 0.1);
   padding: 10px 0px;
   bottom: 0px;
   width: 100%;
@@ -68,6 +69,7 @@
 
   @media screen and (max-width: 767px) {
     position: static;
+    box-shadow: none;
 
     > div svg {
       margin: 0px 0px 0px 10px;
