--- a/libs/ui/src/lib/form-component/FormComponent.module.less
+++ b/libs/ui/src/lib/form-component/FormComponent.module.less
@@ -191,6 +191,14 @@
     min-height: 200px;
   }
 
+  .hideMicro {
+    :global {
+      .DraftEditor-root {
+        padding-left: 5px !important;
+      }
+    }
+  }
+
   .textFieldWithMacroValue:hover {
     border: 1px solid #54b2d3;
   }
