--- a/libs/ui/src/lib/client-card/ClientCard.module.less
+++ b/libs/ui/src/lib/client-card/ClientCard.module.less
@@ -365,6 +365,16 @@
 .clientCardContent {
   width: 100%;
   padding-bottom: 28px;
+  .customTabs{
+    color: red;
+    :global .ClientDashboardLayout_clientDashboardLayout__1ay60 > div:nth-child(1) {
+      max-width: 100%;
+      margin-right: 0;
+      .TabMenu_calendar-settings__1ImST {
+        width: 100%;
+      }
+    }
+  }
 }
 
 .menuItemWrapper {
