--- a/libs/ui/src/lib/image-viewer/CamUploaderModal.module.less
+++ b/libs/ui/src/lib/image-viewer/CamUploaderModal.module.less
@@ -13,12 +13,14 @@
     display: none;
   }
 
-  @media screen and (max-width: 767px) {
+  @media screen and (max-width: 768px) {
     padding: 0;
     margin: 0;
     overflow: auto;
     width: 100vw;
     max-width: 100vw;
+    height: 100vh;
+    max-height: 100vh;
     top: 0;
     :global {
       .ant-modal {
@@ -62,7 +64,7 @@
       display: flex;
       align-items: center;
 
-      @media screen and (max-width: 767px) {
+      @media screen and (max-width: 768px) {
         justify-content: center;
         width: 100%;
       }
@@ -108,7 +110,7 @@
     justify-content: center;
     position: relative;
 
-    @media screen and (max-width: 767px) {
+    @media screen and (max-width: 768px) {
       min-height: calc(100vh - 172px);
     }
 
@@ -178,8 +180,6 @@
 
         video {
           width: 100%;
-          height: 100%;
-          height: auto;
         }
         img {
           min-width: 100% !important;
@@ -266,6 +266,12 @@
               display: flex;
               align-items: center;
               justify-content: center;
+
+              :global {
+                span.anticon-spin {
+                  color: #65cd98;
+                }
+              }
             }
 
             .deleteImageIcon {
