--- a/libs/ui/src/lib/kanban-card/KanbanCard.module.less
+++ b/libs/ui/src/lib/kanban-card/KanbanCard.module.less
@@ -1,13 +1,15 @@
 .card-content{
     display: flex;
     flex-direction: column;
-    width: 250px;
-    min-height: 140px;
-    background-color: white;
+    max-width: 250px;
+    min-width: 100px;
+    width: 100%;
+    max-height: 140px;
     border-radius: 5px;
     padding: 10px 15px;
+    border: 1px solid #ECEDF0 !important;
     overflow: hidden;
-    box-shadow: rgba(60, 64, 67, 0.3) 0px 1px 2px 0px, rgba(60, 64, 67, 0.15) 0px 2px 6px 2px;
+    box-shadow: 2px 2px 8px rgba(0, 34, 65, 0.08);
 
     .lead-title-content{  
         display: flex;
@@ -71,20 +73,38 @@
         box-sizing: border-box;
         margin-top: 2px;
 
+        .avatar-img {
+            img {
+                 height: auto;
+                max-width: 100%;
+            }
+        }
+
         .contact-content{
             display: flex;
-            gap: 10px;
-
+            gap: 5px;
+            margin-left: 10px;
+            .avatar-img {
+                img {
+                    height: auto;
+                    max-width: 100%;
+                }
+            }
+            
             .contact-content-name {
                 display: flex;
                 justify-content: center;
                 align-items: center;
-                font-size: 18px;
+                font-size: 15.5px;
                 color: #737387;
+                .name-section {
+                    white-space: nowrap;
+                    overflow: hidden;
+                    text-overflow: ellipsis;
+                    width: 115px;
+                }
             }
         }
     }
 
-}      
-
-
+}
