--- a/libs/ui/src/lib/image-viewer/CamUploaderModal.module.less
+++ b/libs/ui/src/lib/image-viewer/CamUploaderModal.module.less
@@ -101,6 +101,26 @@
         }
       }
     }
+
+    .cameraFlip {
+      position: absolute;
+      top: 72px;
+      right: 0;
+      display: flex;
+      align-items: center;
+      justify-content: flex-end;
+      padding-top: 10px;
+      padding-right: 15px;
+      z-index: 999;
+      width: 100%;
+      background-color: rgba(0, 0, 0, 0.25);
+
+      > svg {
+        width: 45px;
+        height: auto;
+        fill: #ffffff;
+      }
+    }
   }
 
   .uppyModalBody {
@@ -110,6 +130,10 @@
     align-items: center;
     justify-content: center;
     position: relative;
+
+    &.blackbg {
+      background-color: #000000;
+    }
 
     @media screen and (max-width: 768px) {
       min-height: calc(100vh - 172px);
@@ -200,22 +224,6 @@
             max-height: calc(100vh - 172px) !important;
           }
         }
-      }
-    }
-
-    .cameraFlip {
-      position: absolute;
-      top: 0;
-      width: 100%;
-      display: flex;
-      align-items: center;
-      justify-content: flex-end;
-      padding: 20px 30px 20px 20px;
-
-      > svg {
-        width: 45px;
-        height: auto;
-        fill: #ffffff;
       }
     }
 
