--- a/libs/ui/src/lib/image-viewer/CamUploaderModal.module.less
+++ b/libs/ui/src/lib/image-viewer/CamUploaderModal.module.less
@@ -13,7 +13,7 @@
     display: none;
   }
 
-  @media screen and (max-width: 768px) {
+  &.fullScreen {
     padding: 0;
     margin: 0;
     overflow: auto;
