--- a/libs/ui/src/lib/client-appointments-layout/ClientAppointmentCard.module.less
+++ b/libs/ui/src/lib/client-appointments-layout/ClientAppointmentCard.module.less
@@ -54,38 +54,12 @@
         }
       }
     }
-    .deleteCircle {
-      height: 20px;
-      width: 20px;
-      color: white;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      border-radius: 50%;
-      background-color: red;
-      margin-left: 10px;
-    }
     .notesWrapper {
       &:hover {
         .notes {
           display: none;
         }
-        .lineWrapper {
-          display: block;
-          font-family: var(--font-family);
-          font-size: 10px;
-          font-style: italic;
-          cursor: pointer;
-          margin-top: 2px;
-          span:first-child {
-            color: var(--light-grey-color);
-          }
-          span:last-child {
-            margin-left: 5px;
-            color: var(--primary-color);
-          }
-        }
-        .boxWrapper {
+        .addDescriptionNotice {
           display: flex;
           justify-content: space-between;
           align-items: center;
@@ -122,10 +96,7 @@
           }
         }
       }
-      .boxWrapper {
-        display: none;
-      }
-      .lineWrapper {
+      .addDescriptionNotice {
         display: none;
       }
     }
@@ -152,49 +123,19 @@
         }
       }
     }
-    .cancelTextArea {
-      width: 75%;
-      height: 32px;
-      border-radius: 3px;
-      margin: 5px 0;
-      border-color: var(--border-color-base);
-      outline: none;
-      padding-left: 11px;
-      align-items: center;
-    }
-    .cancelNoteEditor {
-      :global {
-        .ant-select {
-          width: 75%;
-          margin: 5px 0;
-        }
-        .ant-form-item-label > label {
-          margin-top: 5px;
-          font-size: 12px;
-          font-style: italic;
-          color: var(--light-grey-color);
-        }
-      }
-    }
-
-    .cancelReasonFooter {
-      display: flex;
-      align-items: center;
-    }
-
-    .noteTextArea {
-      width: 75%;
-      height: 200px;
-      border: 2px solid var(--primary-color);
-      border-radius: 3px;
-      margin: 5px 0;
-      outline: none;
-    }
-
     .noteEditor {
       display: flex;
       justify-content: flex-start;
       flex-direction: column;
+
+      textarea {
+        width: 75%;
+        height: 200px;
+        border: 2px solid var(--primary-color);
+        border-radius: 3px;
+        margin: 5px 0;
+        outline: none;
+      }
 
       .noteEditorButtonWrapper {
         float: left;
@@ -246,13 +187,13 @@
         border-radius: 4px;
         white-space: nowrap;
         &.new {
-          background-color: #4dc6fa;
+          background-color: #4DC6FA;
         }
         &.cancelled {
-          background-color: #ff7c56;
+          background-color: #FF7C56;
         }
         &.noShow {
-          background-color: #ff5b64;
+          background-color: #FF5B64;
         }
         margin-right: 8px;
         &:last-child {
@@ -321,7 +262,7 @@
     cursor: pointer;
     margin: 0 16px;
     &Red {
-      color: #ff5b64;
+      color: #FF5B64;
       width: 200px;
       height: 2rem;
       margin-bottom: 4px;
@@ -522,22 +463,22 @@
 }
 
 .cancelledLabel {
-  background-color: #ff7c56;
+  background-color: #FF7C56;
 }
 .newLabel {
-  background-color: #4dc6fa;
+  background-color: #4DC6FA;
 }
 .noShowLabel {
-  background-color: #ff5b64;
+  background-color: #FF5B64;
 }
 .waitingLabel {
-  background-color: #faad14;
+  background-color: #FAAD14;
 }
 .arrivedLabel {
-  background-color: #65cd98;
+  background-color: #65CD98;
 }
 .inRoomLabel {
-  background-color: #7b61e2;
+  background-color: #7B61E2;
 }
 .selectedStatusLabel {
   border: 1px solid var(--primary-color);
