--- a/libs/ui/src/lib/client-dashboard-layout/ClientDashboardLayout.module.less
+++ b/libs/ui/src/lib/client-dashboard-layout/ClientDashboardLayout.module.less
@@ -6,6 +6,8 @@
   > div {
     &:nth-child(1) {
       width: 100%;
+      max-width: 370px;
+      margin-right: 1rem;
       display: flex;
       flex-wrap: wrap;
       justify-content: space-between;
@@ -32,6 +34,10 @@
     }
   }
 }
+
+
+
+
 
 .allergiesContainer {
   width: 100%;
