--- a/libs/ui/src/lib/image-viewer/CamUploaderModal.module.less
+++ b/libs/ui/src/lib/image-viewer/CamUploaderModal.module.less
@@ -1,3 +1,10 @@
+@media only screen and (orientation: landscape) {
+  :global {
+    .ant-modal-wrap {
+      overflow: hidden;
+    }
+  }
+}
 .uppyModal {
   :global {
     .ant-modal-content {
@@ -6,6 +13,7 @@
     }
     .ant-modal-body > div {
       padding: 0px;
+      position: relative;
     }
   }
 
@@ -17,10 +25,8 @@
     padding: 0;
     margin: 0;
     overflow: auto;
-    width: 100vw;
-    max-width: 100vw;
-    height: 100vh;
-    max-height: 100vh;
+    min-width: 100vw;
+    min-height: 100vh;
     top: 0;
     :global {
       .ant-modal {
@@ -34,12 +40,143 @@
       }
       .ant-modal-content {
         border-radius: 0;
-        height: 100%;
+        height: 100vh;
+        width: 100vw;
       }
       .ant-modal-body {
         padding: 0;
-        height: 100vh;
-        max-height: 100vh;
+        height: 100%;
+        width: 100%;
+
+        > div {
+          height: 100%;
+          width: 100%;
+          background-color: #eeeeee;
+          padding: 0px;
+          display: flex;
+          flex-direction: column;
+          position: relative;
+        }
+      }
+    }
+
+    .uppyModalHeader {
+      > div.title {
+        justify-content: center;
+        width: 100%;
+      }
+    }
+
+    .uppyModalBody {
+      min-height: calc(100vh - 172px);
+    }
+
+    @media only screen and (orientation: landscape) {
+      overflow: hidden;
+      max-width: 100vh;
+      min-height: 100vw;
+      transform: rotate(90deg);
+
+      :global {
+        .ant-modal-content {
+          height: 100vw;
+          width: 100vh;
+        }
+        .ant-modal-body {
+          height: 100%;
+          width: 100%;
+          padding: 0;
+
+          > div {
+            flex-direction: column-reverse;
+          }
+        }
+      }
+
+      .uppyModalHeader {
+        > span {
+          transform: rotate(-90deg);
+        }
+
+        > div.title {
+          display: flex;
+          align-items: center;
+          justify-content: center;
+          flex-direction: row-reverse;
+          width: 100%;
+
+          > span:first-child {
+            svg {
+              transform: rotate(-90deg);
+            }
+          }
+          > span:last-child {
+            display: none;
+          }
+        }
+
+        .cameraFlip {
+          height: calc(100% - 172px);
+          width: auto;
+          top: auto;
+          bottom: 72px;
+          left: 0px;
+          right: auto;
+          flex-direction: column;
+          justify-content: flex-start;
+          padding-left: 15px;
+          svg {
+            transform: rotate(-90deg);
+          }
+        }
+      }
+
+      .uppyModalBody {
+        min-height: calc(100vw - 172px) !important;
+
+        :global {
+          .dropzone {
+            .dropzoneOverlay {
+              > div {
+                transform: rotate(-90deg);
+                > div:nth-child(2) {
+                  margin-bottom: 0px;
+                }
+              }
+            }
+          }
+          .react-html5-camera-photo {
+            transform: rotate(-90deg);
+          }
+        }
+
+        .addedImagesDiv {
+          left: 36vh;
+          bottom: auto;
+          transform: rotate(-90deg);
+          width: calc(100vw - 172px);
+        }
+      }
+
+      .uppyModalFooter {
+        > div {
+          svg {
+            transform: rotate(-90deg);
+          }
+        }
+
+        > div:first-child {
+          justify-content: flex-end;
+          > span {
+            transform: rotate(-90deg);
+          }
+        }
+        > div:last-child {
+          justify-content: flex-start;
+          button {
+            transform: rotate(-90deg);
+          }
+        }
       }
     }
   }
@@ -52,9 +189,10 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-    position: relative;
 
     > span {
+      left: 25px;
+      transition: transform 0.5s;
       position: absolute;
       font-size: 24px;
       color: #ffffff;
@@ -65,14 +203,10 @@
       display: flex;
       align-items: center;
 
-      @media screen and (max-width: 768px) {
-        justify-content: center;
-        width: 100%;
-      }
-
       > span:first-child {
         line-height: 0px;
         svg {
+          transition: transform 0.5s;
           height: 24px;
           width: 24px;
 
@@ -109,6 +243,7 @@
       display: flex;
       align-items: center;
       justify-content: flex-end;
+      flex-direction: row;
       padding-top: 10px;
       padding-right: 15px;
       z-index: 999;
@@ -116,6 +251,7 @@
       background-color: rgba(0, 0, 0, 0.25);
 
       > svg {
+        transition: transform 0.5s;
         width: 45px;
         height: auto;
         fill: #ffffff;
@@ -135,10 +271,6 @@
       background-color: #000000;
     }
 
-    @media screen and (max-width: 768px) {
-      min-height: calc(100vh - 172px);
-    }
-
     :global {
       .dropzone {
         position: absolute;
@@ -152,35 +284,42 @@
           width: 100%;
           display: flex;
           align-items: center;
-          flex-direction: column;
           justify-content: center;
 
           > div {
-            font-size: 24px;
-            color: var(--grey-text-color);
+            transition: transform 0.5s;
+            display: flex;
+            align-items: center;
+            flex-direction: column;
+            justify-content: center;
+            > div {
+              font-size: 24px;
+              color: var(--grey-text-color);
 
-            > span {
-              color: var(--primary-color);
-              margin-left: 10px;
-              line-height: 0px;
+              > span {
+                color: var(--primary-color);
+                margin-left: 10px;
+                line-height: 0px;
+              }
             }
-          }
 
-          > div:nth-child(2) {
-            margin-bottom: 50px;
-            display: block;
-            font-size: 16px;
-            transform: translateX(-10px);
-            color: var(--light-grey-text-color);
+            > div:nth-child(2) {
+              margin-bottom: 50px;
+              display: block;
+              font-size: 16px;
+              transform: translateX(-10px);
+              color: var(--light-grey-text-color);
+            }
           }
         }
         &.dragOver {
           .dropzoneOverlay {
             border-color: var(--primary-color);
             background-color: #54b2d31c;
-
-            > div:first-child {
-              color: var(--primary-color);
+            > div {
+              > div:first-child {
+                color: var(--primary-color);
+              }
             }
           }
         }
@@ -228,91 +367,75 @@
     }
 
     .addedImagesDiv {
-      background-position: center;
-      background-repeat: no-repeat;
-      background-size: cover;
+      background-color: transparent;
       position: absolute;
+      display: flex;
+      flex-wrap: nowrap;
+      overflow: auto hidden;
       bottom: 0;
       width: 100%;
-      height: fit-content;
+      min-height: 125px;
+      padding: 5px 7px;
 
-      .addedImagesDivInner {
+      &::-webkit-scrollbar {
+        height: 6px;
+        background-color: transparent;
+      }
+      &::-webkit-scrollbar-track {
+        background-color: transparent;
+      }
+      &::-webkit-scrollbar-thumb {
+        border-radius: 100px;
+        background-color: #777;
+      }
+
+      > div {
         position: relative;
-        height: 100%;
-        width: 100%;
+        display: inline-block;
+        min-width: 100px;
+        min-height: 100px;
+        margin: 8px 10px;
+        border: 1px solid #9292a3;
+        border-radius: 4px;
+        filter: drop-shadow(0px 2px 8px rgba(0, 0, 0, 0.15));
+        background-position: center;
+        background-repeat: no-repeat;
+        background-size: cover;
+        cursor: pointer;
 
-        .addedImagesFixer {
-          background-color: transparent;
+        .imgLoading {
           position: absolute;
-          display: flex;
-          flex-wrap: nowrap;
-          overflow: auto hidden;
-          bottom: 0;
+          border-radius: 2px;
           width: 100%;
-          min-height: 125px;
-          padding: 5px 7px;
+          height: 100%;
+          background-color: rgba(14, 9, 23, 0.25);
+          display: flex;
+          align-items: center;
+          justify-content: center;
 
-          &::-webkit-scrollbar {
-            height: 6px;
-            background-color: transparent;
-          }
-          &::-webkit-scrollbar-track {
-            background-color: transparent;
-          }
-          &::-webkit-scrollbar-thumb {
-            border-radius: 100px;
-            background-color: #777;
-          }
-
-          > div {
-            position: relative;
-            display: inline-block;
-            min-width: 100px;
-            min-height: 100px;
-            margin: 8px 10px;
-            border: 1px solid #9292a3;
-            border-radius: 4px;
-            filter: drop-shadow(0px 2px 8px rgba(0, 0, 0, 0.15));
-            background-position: center;
-            background-repeat: no-repeat;
-            background-size: cover;
-            cursor: pointer;
-
-            .imgLoading {
-              position: absolute;
-              border-radius: 2px;
-              width: 100%;
-              height: 100%;
-              background-color: rgba(14, 9, 23, 0.25);
-              display: flex;
-              align-items: center;
-              justify-content: center;
-
-              :global {
-                span.anticon-spin {
-                  color: #65cd98;
-                  font-size: 25px;
-                  margin-top: 5px;
-                }
-              }
+          :global {
+            span.anticon-spin {
+              color: #65cd98;
+              font-size: 25px;
+              margin-top: 5px;
             }
+          }
+        }
 
-            .deleteImageIcon {
-              border: 2px solid #9292a3;
-              border-radius: 100%;
-              width: fit-content;
-              padding: 2px 5px;
-              height: fit-content;
-              background-color: #ffffff !important;
-              color: #9292a3;
-              position: absolute;
-              top: -10px;
-              right: -10px;
+        .deleteImageIcon {
+          border: 2px solid #9292a3;
+          border-radius: 100%;
+          width: fit-content;
+          padding: 2px 5px;
+          height: fit-content;
+          background-color: #ffffff !important;
+          color: #9292a3;
+          position: absolute;
+          top: -10px;
+          right: -10px;
 
-              > span {
-                line-height: 0px;
-              }
-            }
+          > span {
+            line-height: 0px;
           }
         }
       }
@@ -340,12 +463,17 @@
       line-height: 24px;
       justify-content: flex-start;
       color: #ffffff;
+
+      > span {
+        transition: transform 0.5s;
+      }
     }
 
     > div:nth-child(2) {
       justify-content: center;
       svg.camIcon,
       svg.photoIcon {
+        transition: transform 0.5s;
         width: 60px;
         height: 60px;
         cursor: pointer;
@@ -387,6 +515,7 @@
     > div:last-child {
       justify-content: flex-end;
       button {
+        transition: transform 0.5s;
         width: 66px;
         height: 40px;
         display: flex;
