--- a/libs/ui/src/lib/image-viewer/CamUploaderModal.module.less
+++ b/libs/ui/src/lib/image-viewer/CamUploaderModal.module.less
@@ -132,7 +132,7 @@
       }
 
       .uppyModalBody {
-        min-height: calc(100vw - 172px) !important;
+        min-height: calc(100% - 172px) !important;
 
         :global {
           .dropzone {
@@ -151,10 +151,23 @@
         }
 
         .addedImagesDiv {
-          left: 36vh;
-          bottom: auto;
-          transform: rotate(-90deg);
-          width: calc(100vw - 172px);
+          flex-direction: column-reverse;
+          justify-content: flex-start;
+          flex-wrap: nowrap;
+          overflow: hidden auto;
+          right: 0;
+          height: 100%;
+          min-width: 125px;
+          max-width: 130px;
+          padding: 5px 7px;
+
+          &::-webkit-scrollbar {
+            width: 6px;
+          }
+
+          > div {
+            transform: rotate(-90deg);
+          }
         }
       }
 
@@ -192,7 +205,7 @@
 
     > span {
       left: 25px;
-      transition: transform 0.5s;
+      transition: transform 0.25s;
       position: absolute;
       font-size: 24px;
       color: #ffffff;
@@ -206,7 +219,7 @@
       > span:first-child {
         line-height: 0px;
         svg {
-          transition: transform 0.5s;
+          transition: transform 0.25s;
           height: 24px;
           width: 24px;
 
@@ -251,7 +264,7 @@
       background-color: rgba(0, 0, 0, 0.25);
 
       > svg {
-        transition: transform 0.5s;
+        transition: transform 0.25s;
         width: 45px;
         height: auto;
         fill: #ffffff;
@@ -287,7 +300,7 @@
           justify-content: center;
 
           > div {
-            transition: transform 0.5s;
+            transition: transform 0.25s;
             display: flex;
             align-items: center;
             flex-direction: column;
@@ -353,17 +366,6 @@
           display: none;
         }
       }
-
-      @media screen and (max-width: 768px) {
-        .react-html5-camera-photo {
-          max-width: 100vw !important;
-          max-height: calc(100vh - 172px) !important;
-          video {
-            max-width: 100vw !important;
-            max-height: calc(100vh - 172px) !important;
-          }
-        }
-      }
     }
 
     .addedImagesDiv {
@@ -371,7 +373,7 @@
       position: absolute;
       display: flex;
       flex-wrap: nowrap;
-      overflow: auto hidden;
+      overflow: auto;
       bottom: 0;
       width: 100%;
       min-height: 125px;
@@ -390,10 +392,13 @@
       }
 
       > div {
+        transition: transform 0.25s;
         position: relative;
         display: inline-block;
         min-width: 100px;
         min-height: 100px;
+        max-width: 100px;
+        max-height: 100px;
         margin: 8px 10px;
         border: 1px solid #9292a3;
         border-radius: 4px;
@@ -465,7 +470,7 @@
       color: #ffffff;
 
       > span {
-        transition: transform 0.5s;
+        transition: transform 0.25s;
       }
     }
 
@@ -473,7 +478,7 @@
       justify-content: center;
       svg.camIcon,
       svg.photoIcon {
-        transition: transform 0.5s;
+        transition: transform 0.25s;
         width: 60px;
         height: 60px;
         cursor: pointer;
@@ -515,7 +520,7 @@
     > div:last-child {
       justify-content: flex-end;
       button {
-        transition: transform 0.5s;
+        transition: transform 0.25s;
         width: 66px;
         height: 40px;
         display: flex;
