--- a/libs/ui/src/lib/appointments/AppointmentItem.module.less
+++ b/libs/ui/src/lib/appointments/AppointmentItem.module.less
@@ -14,7 +14,7 @@
 }
 .appointmentItem {
   width: 100%;
-  min-width: 770px;
+  min-width: 768px;
   box-sizing: border-box;
   border-radius: 4px;
   .content {
@@ -27,19 +27,6 @@
     height: 92px;
   }
 
-  .waiting {
-    background: #3e8df7;
-  }
-  .inProgress {
-    background: #fffe77;
-  }
-  .arrived {
-    background: #dd7cf8;
-  }
-  .completed {
-    background: #7dec63;
-  }
-
   .timeTextStyle {
     span {
       font-size: 14px;
@@ -47,11 +34,11 @@
       color: #3d3d46;
     }
   }
-  .profileGrid {
-    display: grid;
-    grid-template-columns: 52px minmax(0, 1fr);
-    gap: 0 13px;
-    .profileGridItems {
+  .clientContainer {
+    display: flex;
+    align-items: center;
+    .clientInfo {
+      margin-left: 13px;
       p {
         font-size: 16px;
         line-height: 18px;
