backend Implemented filter for financial invoices

--- a/apps/web/components/ClientCard/client-financial-layout/invoices/Invoices.module.less
+++ b/apps/web/components/ClientCard/client-financial-layout/invoices/Invoices.module.less
@@ -173,6 +173,14 @@
       }
     }
   }
+  .buttons{
+    .applyButton {
+      width: 115px;
+    }
+    display: flex;
+    justify-content: space-between;
+    margin-top: 10px;
+  }
 }
 .collapseIconContainer {
   min-width: 95px;
