--- a/libs/ui/src/lib/client-dashboard-layout/ClientDashboardLayout.module.less
+++ b/libs/ui/src/lib/client-dashboard-layout/ClientDashboardLayout.module.less
@@ -1,11 +1,13 @@
 .clientDashboardLayout {
   width: 100%;
+  height: 100%;
   display: flex;
   flex-wrap: wrap;
 
   > div {
     &:nth-child(1) {
       width: 100%;
+      height: 100%;
       // max-width: 370px;
       margin-right: 1rem;
       display: flex;
