--- a/libs/ui/src/lib/gallery-view/GalleryView.module.less
+++ b/libs/ui/src/lib/gallery-view/GalleryView.module.less
@@ -32,6 +32,16 @@
         padding: unset;
       }
     }
+
+    .filterButton {
+      border: none;
+      padding: 0px;
+    }
+
+    .downloadBtn {
+      margin: 10px 0;
+    }
+
     button {
       margin: 0px 10px;
       @media screen and (max-width: 479px) {
@@ -79,16 +89,35 @@
       background: #54b2d3;
       border: none;
       border-radius: 4px;
-      padding: 2px 7px;
+      padding: 4px 7px;
+      height: fit-content;
       font-size: 14px;
       line-height: 22px;
       color: #fff;
       cursor: pointer;
-    }
-    .create-content {
-      padding: 10px !important;
-      .content-item {
-        padding: 5px !important;
+      :global {
+        .ant-popover-inner-content {
+          padding: 10px 0px;
+          width: fit-content;
+          min-width: 170px;
+        }
+      }
+      span:last-child {
+        margin-left: 5px;
+      }
+      .create-content {
+        .content-item {
+          cursor: pointer;
+          padding: 5px 20px;
+
+          > span {
+            margin-right: 5px;
+          }
+
+          &:hover {
+            background-color: #eeeeee;
+          }
+        }
       }
     }
   }
@@ -109,16 +138,22 @@
   }
 }
 
+.displayNone {
+  display: none !important;
+}
+
 .galleryImgBox {
   display: flex;
   //flex-wrap: wrap;
   overflow: auto;
   margin-bottom: 20px;
+  height: 100%;
+
   .galleryWrap {
-    display: contents;
-    justify-content: center;
-    flex-direction: row;
-    align-items: center;
+    // display: contents;
+    // justify-content: center;
+    // flex-direction: row;
+    // align-items: center;
     position: relative;
     //flex-wrap: wrap;
     :global {
@@ -150,55 +185,35 @@
     }
     .check-wrapper {
       position: absolute;
-      right: 25px;
+      right: 15px;
       top: 10px;
-      visibility: visible;
+      z-index: 1;
+      visibility: hidden;
       svg {
         fill: #000000a6;
       }
     }
-    &:hover {
-      .check-wrapper {
-        position: absolute;
-        right: 25px;
-        top: 10px;
-        visibility: visible;
-        svg {
-          fill: #000000a6;
-        }
-      }
+    &:hover .check-wrapper {
+      visibility: visible;
     }
+
     .albumContainer {
       position: relative;
       margin: 0 12px 0 12px;
       .check-wrapper {
-        position: absolute;
-        right: 25px;
-        top: 10px;
-        z-index: 1;
         visibility: hidden;
-        svg {
-          fill: #000000a6;
-        }
         .dotBtn {
           cursor: pointer;
-          padding: 3px 10px 0 10px;
+          padding: 3px 11px 0 11px;
+          box-shadow: 3px 3px 5px lightgray;
           background-color: white;
           border-radius: 50%;
           height: 100%;
           width: 100%;
         }
       }
-      &:hover {
-        .check-wrapper {
-          position: absolute;
-          right: 25px;
-          top: 10px;
-          visibility: visible;
-          svg {
-            fill: #000000a6;
-          }
-        }
+      &:hover .check-wrapper {
+        visibility: visible;
       }
       .grid-container {
         display: grid;
@@ -214,9 +229,6 @@
           border: 1px solid deepskyblue;
           border-radius: 6px;
           .check-wrapper {
-            position: absolute;
-            right: 25px;
-            top: 10px;
             visibility: visible;
             svg {
               fill: #000000a6;
@@ -224,13 +236,7 @@
           }
         }
         .check-wrapper {
-          position: absolute;
-          right: 25px;
-          top: 10px;
           visibility: hidden;
-          svg {
-            fill: #000000a6;
-          }
         }
         .grid-item {
           width: 70px;
@@ -293,8 +299,10 @@
     }
     .albumInfo {
       text-align: center;
+      padding-top: 5px;
       .albumTitle {
-        font-size: 16px;
+        font-size: 14px;
+        color: var(--grey-text-color);
         margin: 0;
       }
       .albumCount {
@@ -307,29 +315,10 @@
     display: flex;
     flex-wrap: wrap;
     width: 100%;
-  }
 
-  .scrollDiv {
-    max-height: 73vh;
-    padding-bottom: 180px;
-    overflow-y: auto;
-    &::-webkit-scrollbar-track {
-      border-radius: 10px;
-      background-color: transparent;
-    }
-
-    &::-webkit-scrollbar {
-      width: 7.5px;
-      background-color: transparent;
-    }
-
-    &::-webkit-scrollbar-thumb {
-      display: none;
-      border-radius: 100px;
-      background-color: rgba(0, 0, 0, 0.45);
-    }
-    &:hover::-webkit-scrollbar-thumb {
-      display: block;
+    > div {
+      min-width: 170px;
+      margin-top: 24px;
     }
   }
 }
@@ -340,7 +329,7 @@
   display: flex;
   flex-wrap: wrap;
   padding-top: 20px;
-  margin: 0 14px 14px 14px;
+  margin: 0px 14px 14px 14px !important;
   @media only screen and (max-width: 767px) {
     margin: 0 11px 0 11px;
     max-width: 414px;
@@ -404,7 +393,7 @@
         background-color: red;
       }
       .dotBtn {
-        padding: 3px 10px 0 10px;
+        padding: 3px 11px 0 11px;
         background-color: white;
         border-radius: 50%;
         height: 100%;
@@ -431,11 +420,11 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    border: 1px solid lightgray;
+    border: 1px solid #eeeeee;
 
     :global .ant-skeleton-image {
-      width: 112px;
-      height: 112px;
+      width: 96px;
+      height: 96px;
     }
     cursor: pointer;
     @media only screen and (max-width: 767px) {
@@ -796,6 +785,15 @@
         width: 100%;
         color: #3d3d46;
         margin: 5px;
+
+        .active {
+          color: #54b2d3;
+        }
+
+        .inActive {
+          color: #fff;
+        }
+
         .galleryIcon {
           width: 44px;
           height: 44px;
@@ -833,8 +831,30 @@
 .mainLayout {
   display: flex;
   flex-direction: column;
+  position: relative;
+  height: 100%;
+
+  > div:first-child {
+    margin-top: 20px;
+    height: 100%;
+    padding-bottom: 80px;
+  }
+
   .headerMenu {
     padding: 0px 0 0 20px;
+  }
+
+  .pagination {
+    width: 100%;
+    position: absolute;
+    bottom: 0;
+    > div {
+      padding: 0px;
+
+      > ul {
+        padding-right: 0px;
+      }
+    }
   }
   /* justify-content: center; */
 }
@@ -864,6 +884,19 @@
       }
       .leftItem {
         float: right;
+      }
+
+      &:first-child {
+        border-bottom: 1px solid #ecedf0;
+      }
+      &:last-child {
+        color: red;
+        > span {
+          color: red;
+          > svg {
+            fill: red;
+          }
+        }
       }
     }
   }
@@ -913,6 +946,8 @@
 }
 .gridViewItemSkeleton {
   margin-top: 0px;
+  padding: 0px;
+
   @media only screen and (max-width: 767px) {
     max-width: 414px;
   }
@@ -935,7 +970,7 @@
       justify-content: center;
       align-items: center;
       border-radius: 4px;
-      margin: 0 6px 10px 6px;
+      margin: 0 5px 10px 5px;
       border: 1px solid #eee;
     }
   }
@@ -988,7 +1023,7 @@
           tr {
             cursor: pointer;
             &:hover {
-              //background-color: #ECEDF0 !important;
+              background-color: #ecedf0 !important;
             }
             td {
               background: unset;
@@ -1010,6 +1045,7 @@
   }
 }
 .albumListView {
+  height: 100%;
   overflow: auto;
   margin-left: 10px;
   :global {
@@ -1175,8 +1211,7 @@
     }
   }
   p {
-    margin-top: 20px;
-    margin-left: 10px;
+    margin: 0px;
     max-width: 600px;
     white-space: nowrap;
     overflow: hidden;
@@ -1184,5 +1219,15 @@
   }
   img {
     margin-top: 12px;
+  }
+}
+
+.column-loader {
+  > div {
+    width: 100%;
+
+    > span {
+      width: 100%;
+    }
   }
 }
