--- a/libs/ui/src/lib/full-screen-report-modal/FullScreenReportModal.module.less
+++ b/libs/ui/src/lib/full-screen-report-modal/FullScreenReportModal.module.less
@@ -168,4 +168,7 @@
 .centeredItem {
   display: flex;
   justify-content: center;
+  position: absolute;
+  align-items: center;
+  width: inherit;
 }
