--- a/libs/ui/src/lib/header/Header.module.less
+++ b/libs/ui/src/lib/header/Header.module.less
@@ -75,6 +75,13 @@
 .header-align {
   display: flex !important;
   align-items: center !important;
+
+  img {
+    height: 20px;
+    width: 20px;
+    margin-right: 24px;
+    cursor: pointer;
+  }
 }
 .header-icon-end {
   display: flex !important;
