--- a/apps/web/components/ClientCard/client-financial-layout/invoices/Invoices.module.less
+++ b/apps/web/components/ClientCard/client-financial-layout/invoices/Invoices.module.less
@@ -214,3 +214,43 @@
     font-size: 20px;
   }
 }
+.columnSkeleton{
+  width: 80px;
+  height: 18px;
+}
+.idSkeleton{
+  width: 100px;
+  height: 18px;
+}
+.valueSkeleton{
+  width: 30px;
+  height: 18px;
+}
+.totalSkeleton{
+  width: 60px;
+  height: 18px;
+}
+.grandTotalSkeleton{
+  width: 120px;
+  height: 30px;
+}
+.totalValueSkeleton{
+  width: 100px;
+  height: 18px;
+  margin-top: 10px;
+}
+.locationSkeleton{
+  width: 140px;
+  height: 18px;
+}
+.idValueSkeleton{
+  width: 80px;
+  height: 18px;
+  margin-top: 8px;
+}
+.filterSkeleton{
+  width: 30px;
+  margin-top: 5px;
+  margin-right: 5px;
+  margin-bottom: 10px;
+}
