worked-on-uploading-images-in-client-card

--- a/libs/ui/src/lib/image-viewer/CamUploaderModal.module.less
+++ b/libs/ui/src/lib/image-viewer/CamUploaderModal.module.less
@@ -4,7 +4,7 @@
 @media only screen and (orientation: landscape) {
   :global {
     .ant-modal-wrap {
-      overflow: hidden;
+      // overflow: hidden;
     }
   }
 }
@@ -426,6 +426,10 @@
               font-size: 25px;
               margin-top: 5px;
             }
+          }
+
+          .progressIndicator {
+            cursor: pointer;
           }
 
           .cancelIcon {
