--- a/libs/ui/src/lib/kanban-card/KanbanCard.module.less
+++ b/libs/ui/src/lib/kanban-card/KanbanCard.module.less
@@ -12,12 +12,15 @@
     box-shadow: 2px 2px 8px rgba(0, 34, 65, 0.08);
 
     .lead-title-content{  
-        display: flex;
         width: 100%;
         font-weight: 500;
         font-size: 15.5px;
         color: #3d3d46;
-        cursor: pointer
+        cursor: pointer;
+        text-overflow: ellipsis;
+        white-space: nowrap;
+        overflow: hidden;
+        max-width: 220px;
     }
 
     .label-and-btn {
@@ -48,8 +51,8 @@
 
             .label {
                 padding: 0 4px 0;
-                font-size: 12px;
-                margin-bottom: 8px;
+                font-size: 11.2px;
+                margin-bottom: 4px;
                 font-weight: 500;
             }
         }
@@ -83,7 +86,7 @@
         .contact-content{
             display: flex;
             gap: 5px;
-            margin-left: 10px;
+            margin-left: 5px;
             .avatar-img {
                 img {
                     height: auto;
@@ -101,7 +104,7 @@
                     white-space: nowrap;
                     overflow: hidden;
                     text-overflow: ellipsis;
-                    width: 115px;
+                    width: 97px;
                 }
             }
         }
