--- a/apps/web/components/Journey/Journey.module.less
+++ b/apps/web/components/Journey/Journey.module.less
@@ -11,3 +11,49 @@
     }
   }
 }
+
+.headerCenter {
+  span {
+    font-size: 18px;
+    color: #3d3d46;
+  }
+  p {
+    display: none;
+  }
+}
+
+.logoContainer {
+  width: 89px;
+  height: 44px;
+}
+
+@media screen and (max-width: 1024px) {
+  .journeyContainer {
+    .grid {
+      grid-template-columns: repeat(1, 1fr);
+      gap: 0;
+      .gridItems:nth-child(2) {
+        display: none;
+      }
+    }
+  }
+
+  .logoContainer {
+    width: 65px;
+    height: 32px;
+  }
+
+  .headerCenter {
+    span {
+      font-size: 18px;
+      color: #3d3d46;
+      display: none;
+    }
+    p {
+      display: block;
+      color: #000000;
+      font-size: 17px;
+      margin: 0;
+    }
+  }
+}
