working-on-images-movement

--- a/libs/ui/src/lib/image-viewer/CamUploaderModal.module.less
+++ b/libs/ui/src/lib/image-viewer/CamUploaderModal.module.less
@@ -1,10 +1,10 @@
 .fileInput {
-  display: none !important;
+  visibility: hidden !important;
 }
-@media only screen and (orientation: landscape) {
+@media only screen and (orientation: portrait) {
   :global {
     .ant-modal-wrap {
-      overflow: hidden;
+      // overflow: hidden;
     }
   }
 }
