complete scroll functionality

--- a/apps/web/components/Leads/LeadsStages/LeadsStages.module.less
+++ b/apps/web/components/Leads/LeadsStages/LeadsStages.module.less
@@ -4,11 +4,12 @@
         overflow-x: auto;
         max-height: calc(100vh - 300px);
         min-height: 74vh;
+        scroll-behavior: smooth;
       .lead-stage {
         display: flex;
         align-items: center;
         top:0;
-        z-index: 9;
+        z-index: 8;
         position: sticky;
         
         .lead-stage-titlemain { 
