PABAU2-1558: Resolve storybook issues, change next previous icon and date package

--- a/libs/ui/src/lib/journey-calendar/JourneyCalendar.module.less
+++ b/libs/ui/src/lib/journey-calendar/JourneyCalendar.module.less
@@ -96,6 +96,10 @@
     align-items: center;
     justify-content: center;
     cursor: pointer;
+    svg {
+      width: 16px;
+      height: 16px;
+    }
   }
   .nextArrow {
     display: block;
@@ -109,7 +113,10 @@
     align-items: center;
     justify-content: center;
     cursor: pointer;
-    transform: rotate(180deg);
+    svg {
+      width: 16px;
+      height: 16px;
+    }
   }
   .activeDate {
     .journyCalenderDateWrap {
