Worked on the activity lead filter

--- a/apps/web/components/Activities/CreateFilterModal.module.less
+++ b/apps/web/components/Activities/CreateFilterModal.module.less
@@ -1,4 +1,12 @@
 .filter-modal-wrapper {
+  padding: 30px 0 0;
+  
+  .filter-content-main {
+    height: calc(100vh - 220px);
+    overflow: auto;
+    overflow-x: hidden;
+    padding: 0 40px;
+}
   :global {
     .ant-modal-content {
       .ant-modal-header {
@@ -8,6 +16,9 @@
           text-transform: capitalize;
           color: #3d3d46;
         }
+      }
+      .ant-modal-body {
+        
       }
     }
   }
@@ -57,8 +68,8 @@
     }
     :global {
       .ant-select {
-        width: 170px;
-        min-width: 170px;
+        width: 160px;
+        min-width: 160px;
         margin-right: 16px;
         &:last-child {
           margin-right: 0;
@@ -76,8 +87,8 @@
     .custom-radio-wrapper,
     .subject-input {
       display: flex;
-      width: 170px;
-      min-width: 170px;
+      width: 160px;
+      min-width: 160px;
       :global {
        .ant-radio-button-wrapper {
         width: 70px;
@@ -96,7 +107,7 @@
       }
     }
     .filter-menu-wrapper {
-      min-width: 170px;
+      min-width: 160px;
       margin-right: 20px;
     }
     .client-wrapper {
@@ -235,7 +246,7 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding-bottom: 40px;
+    padding: 0 20px 40px;
   .btn-danger {
     background: #ff5b64;
     border-radius: 4px;
