--- a/libs/ui/src/lib/journey-calendar/JourneyCalendar.module.less
+++ b/libs/ui/src/lib/journey-calendar/JourneyCalendar.module.less
@@ -50,6 +50,9 @@
       line-height: 22px;
       letter-spacing: -0.408px;
     }
+    @media only screen and (max-width: 767px) {
+      font-size: 14px;
+    }
   }
   .journyCalenderColWrap {
     display: flex;
@@ -137,6 +140,9 @@
       text-align: center;
       color: #333333;
       flex: 1;
+      @media only screen and (max-width: 767px) {
+        font-size: 14px;
+      }
     }
     .todayText {
       font-size: 17px;
@@ -146,6 +152,9 @@
       color: #54b2d3;
       text-align: right;
       flex: 1;
+      @media only screen and (max-width: 767px) {
+        font-size: 14px;
+      }
     }
   }
 }
