Add badge and customize booking method and add scroll in dashboard

--- a/apps/web/components/Dashboard/TopBoard/TopBoard.module.less
+++ b/apps/web/components/Dashboard/TopBoard/TopBoard.module.less
@@ -124,6 +124,10 @@
   }
   .table{
     border-right: 1px solid #ECEDF0;
+    .apptContant{
+      max-height: 275px;
+      overflow: auto;
+    }
     .topheader{
       padding: 24px 16px 16px 24px;
       .title{
