feat: check pathway status integration

--- a/apps/web/components/Appointments/AppointmentItem.module.less
+++ b/apps/web/components/Appointments/AppointmentItem.module.less
@@ -39,6 +39,26 @@
   .clientContainer {
     display: flex;
     align-items: center;
+
+    .avatarContainer {
+      position: relative;
+      p {
+        font-size: 14px;
+        border-radius: 4px;
+        background: #54b2d3;
+        color: #fff;
+        position: absolute;
+        z-index: 1;
+        height: 20px;
+        width: 20px;
+        border-radius: 50%;
+        text-align: center;
+        right: 0;
+        bottom: 0;
+        margin-bottom: 0;
+      }
+    }
+
     .clientInfo {
       margin-left: 13px;
       p {
