feat: add checked in time

--- a/apps/web/components/Appointments/AppointmentItem.module.less
+++ b/apps/web/components/Appointments/AppointmentItem.module.less
@@ -61,6 +61,23 @@
 
     .clientInfo {
       margin-left: 13px;
+
+      .appointementStatus {
+        display: flex;
+        align-items: center;
+        text-transform: capitalize;
+        div {
+          margin-left: 8px;
+          display: flex;
+          align-items: center;
+          span {
+            color: #ff5b64;
+            font-size: 12px;
+            margin-left: 2px;
+          }
+        }
+      }
+
       p {
         font-size: 16px;
         line-height: 18px;
